admission-webhook/apim/admission-webhook-svc.yml
#
# Copyright (C) 2015 The Gravitee team (http://gravitee.io)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gateway-admission-webhook
  name: gateway-admission-webhook
spec:
  ports:
    - name: webhook
      port: 18082
      protocol: TCP
      targetPort: 18082
  selector:
    app.kubernetes.io/component: gateway
  type: ClusterIP
