admission-webhook/apim/admission-registration.yml
#
# Copyright (C) 2015 The Gravitee team (http://gravitee.io)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "admission-hook.gravitee.io"
webhooks:
  - name: "gateway-admission-webhook.default.svc"
    rules:
      - apiGroups:   ["gravitee.io"]
        apiVersions: ["v1alpha1"]
        operations:  ["CREATE", "UPDATE", "DELETE"]
        resources:   ["*"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: default
        name: gateway-admission-webhook
        port: 18082
        path: "/hooks/kube/admission"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZIekNDQXdlZ0F3SUJBZ0lVVFYzcVRoV21uaS9uN01iNkJnNjRZempibzVjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0h6RWRNQnNHQTFVRUF3d1VaMkYwWlhkaGVTMWhaRzFwYzNOcGIyNHRZMkV3SGhjTk1qRXdNakkxTVRVdwpOVE14V2hjTk16RXdNakl6TVRVd05UTXhXakFmTVIwd0d3WURWUVFEREJSbllYUmxkMkY1TFdGa2JXbHpjMmx2CmJpMWpZVENDQWlJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dJUEFEQ0NBZ29DZ2dJQkFLVmxHakV6dSttdmQxalcKaVlicEtKeDBuRWowd0J0bDVKRXl2U1ZTdVNXczJ4YjNoNVZrSTFxSkFCczlEd3l0SDlpWi9kazVzSzM1c2tzTgpxV21vb3RLcTg [...]
      #url: https://gateway-ingress-apim-gateway-865b995968-djr9x:18082/hooks/kube/admission/
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
